Bugfix: set z-index on asset thumbnails

--- a/media/boom/css/boom/assets.css.less
+++ b/media/boom/css/boom/assets.css.less
@@ -56,6 +56,7 @@
 			display: inline-block;
 			position: relative;
 			overflow: hidden;
+			z-index: 1;
 		}
 
 		.selected .thumb {
